Set up for Gatling load test of webrick puppetmaster